--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "critters": "^0.0.16",
     "next": "12.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sharp": "^0.30.7"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.2",
