--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "dependencies": {
     "@headlessui/react": "^1.6.5",
     "@heroicons/react": "^1.0.6",
+    "@hookform/resolvers": "^2.9.4",
     "clsx": "^1.2.0",
     "critters": "^0.0.16",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.33.1",
-    "sharp": "^0.30.7"
+    "sharp": "^0.30.7",
+    "zod": "^3.17.3"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.2",
