--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.6.5",
     "@heroicons/react": "^1.0.6",
     "@hookform/resolvers": "^2.9.4",
+    "axios": "^0.27.2",
     "clsx": "^1.2.0",
     "critters": "^0.0.16",
     "next": "12.2.0",
