--- a/.env-example
+++ b/.env-example
@@ -1,8 +1,6 @@
-# Note that not all variables here might be in use for your selected configuration
+# Mail
 
-# Prisma
-DATABASE_URL=
-
-# Next Auth
-GITHUB_ID=
-GITHUB_SECRET=
+MAIL_HOST=
+MAIL_USER=
+MAIL_PASSWORD=
+MAIL_PORT=
