--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.6.5",
     "@heroicons/react": "^1.0.6",
     "@hookform/resolvers": "^2.9.4",
+    "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
     "clsx": "^1.2.0",
     "critters": "^0.0.16",
@@ -20,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.33.1",
+    "react-redux": "^8.0.2",
     "sharp": "^0.30.7",
     "zod": "^3.17.3"
   },
