--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-hook-form": "^7.33.1",
     "react-redux": "^8.0.2",
     "sharp": "^0.30.7",
-    "zod": "^3.17.3"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.2",
