--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "axios": "^0.27.2",
     "clsx": "^1.2.0",
     "critters": "^0.0.16",
-    "next": "12.2.0",
+    "next": "^12.2.1",
     "nodemailer": "^6.7.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
