--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "axios": "^0.27.2",
     "clsx": "^1.2.0",
     "critters": "^0.0.16",
+    "date-fns": "^2.28.0",
     "next": "^12.2.1",
     "nodemailer": "^6.7.7",
     "react": "18.2.0",
+    "react-datocms": "^3.0.15",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.33.1",
     "react-redux": "^8.0.2",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1",
     "sharp": "^0.30.7",
     "yup": "^0.32.11"
   },
